Fix editor alignment

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -74,7 +74,7 @@
 
   ol[data-type="steps"]:not(:where(.not-prose *)) {
     counter-reset: steps;
-    @apply flex flex-col;
+    @apply flex flex-col -ml-1;
 
     &:not(:first-child) {
       @apply mt-6;
@@ -88,6 +88,10 @@
     counter-increment: steps;
     position: relative;
     padding-inline-start: calc(var(--step-number-size) + var(--step-number-gap));
+
+    @media (width < 800px) {
+      --step-number-gap: 8px;
+    }
     
     &::before {
       all: unset;
@@ -101,6 +105,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      font-size: 1.1em;
       content: counter(steps);
       @apply bg-gray-a4;
     }
@@ -149,7 +154,7 @@
   }
 
   details {
-    --indent: calc(var(--spacing) * 4);
+    --indent: 1.5em;
   }
 
   details[open] + details {
@@ -158,7 +163,7 @@
 
   summary {
     --summary-inline-padding: 0.3em;
-    @apply rounded-md font-medium relative list-none;
+    @apply rounded-md font-semibold relative list-none;
     inline-size: fit-content;
     padding-inline: calc(var(--indent) + var(--summary-inline-padding)) calc(var(--summary-inline-padding) * 1.5);
     margin-inline: calc(var(--summary-inline-padding) * -1);
@@ -176,6 +181,7 @@
     scale: 0.65;
     transition: rotate 0.15s ease-out;
     opacity: 0.5;
+    margin-inline-start: 0.05em;
   }
 
   details[open] summary:before {
